Courses out, fixes
